# HellFire-Site

./: .flaskenv  .gitignore  README.md  app.db  config.py  db.sqlite3  development-details.md  dispatcher.py  editor-overview.md  manage.py  overview.md  pyproject.toml
HellFire_Site/: asgi.py  settings.py  urls.py  wsgi.py
api/: __init__.py  config.py  extensions.py
api/models/: token_blocklist.py  user.py
api/users/: __init__.py  routes.py
app/: __init__.py  extensions.py  models.py  remote.py  repositories.py  roles.py  utils.py
app/auth/: auth.py  forms.py
app/auth/templates/: authenticate.html  register.html
app/index/: index.py
app/projects/: forms.py  projects.py
app/projects/templates/: project.html  project_roles.html  projects.html
app/templates/: 404.html  500.html  base.html
app/user/: user.py
app/user/templates/: user.html
core/: settings.py  urls.py
editor/: urls.py  views.py
editor/migrations/: 0001_initial.py
editor/templates/: authenticate.html  dashboard.html  example.html
editorAPI/: apps.py
hellfire/: __init__.py  extensions.py
hellfire/auth/: __init__.py  routes.py
hellfire/site/: __init__.py  routes.py
hellfire/site/database/: projects_data.py
hellfire/site/models/: project.py  user.py
hellfire/site/templates/: base.html  index.html  project.html
hf_site/: __init__.py  config.py  extensions.py
hf_site/main/: __init__.py  routes.py
