[tool.poetry]
name = "hellfire-site"
version = "0.1.0"
description = ""
authors = ["some16 <106182433+some16@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
djangorestframework = "^3.14.0"
django-filter = "^23.5"
markdown = "^3.5.1"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
social-auth-app-django = "^5.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
