[tool.poetry]
name = "hellfire-site"
version = "0.1.0"
description = ""
authors = ["some16 <106182433+some16@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.1.1"
github-flask = "^3.2.0"
pyjwt = "^2.8.0"
flask-jwt-extended = "^4.6.0"
python-dotenv = "^1.0.0"
flask-expects-json = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
